Add fantacitorio API endpoint
